Fixed JS file link

--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 
   <!-- JavaScript File Link -->
 
-  <script type=”text/javascript” src=”js/script.js”></script>
-
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
   <link href="https://fonts.googleapis.com/css2?family=Bentham&family=Bodoni+Moda:ital,wght@0,400;1,500&family=Lato:wght@300;700&display=swap" rel="stylesheet">
@@ -43,6 +41,8 @@
   			<h1>Where's my puppy?</h1>
   			<p id="location">Madi is:</p>
   		</section>
+
+      <script src="js/script.js"></script>
 
 	</body>
 </html>
